--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,9 +1,7 @@
 # Copy to .env and fill in values
 # Example DATABASE_URL: postgres://username:password@localhost:5432/jibuks_dev
 PORT=4001
-DATABASE_URL=postgresql://postgres:1901@localhost:5432/jibuk
-
-# JWT Configuration
+DATABASE_URL=postgresql://postgres:PASWORD@localhost:5432/APP
 JWT_SECRET=your-super-secret-jwt-key-change-in-production
 
 # Auth0 Configuration (optional)
