--- a/backend/package.json
+++ b/backend/package.json
@@ -20,6 +20,8 @@
     "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.1",
+    "multer": "^2.0.2",
+    "nodemailer": "^7.0.12",
     "passport": "^0.6.0",
     "passport-auth0": "^1.4.0",
     "pg": "^8.16.3"
